[project]
name = "personal-space"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<6.0",
    "Pillow>=12.0",
    "psycopg2-binary>=2.9",
    "dj-database-url>=3.1",
    "django-storages[boto3]>=1.14",
    "boto3>=1.34",
]

[tool.vercel.scripts]
build = "python build.py"
