[project]
name = "personal-space"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<6.0",
    "Pillow>=12.0",
    "psycopg2-binary>=2.9",
    "dj-database-url>=3.1",
    "cloudinary>=1.44",
    "django-cloudinary-storage>=0.3.0",
    "whitenoise>=6.11",
    "Markdown>=3.10",
    "Pygments>=2.20",
]

[project.scripts]
app = "blogproject.wsgi:application"

[tool.vercel.scripts]
build = "python build.py"
